[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
package-mode = false

[project]
name = "flight-recommender"
version = "0.1.0"
description = "Rewards Redemption Optimizer - Find optimal airline route redemptions using miles vs cash"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "pydeck>=0.9.1",
    "streamlit>=1.48.1",
]
